--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,4 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <Button
+        android:visibility="gone"
+        android:id="@+id/btn_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="start camera"
+        android:padding="10dp"
+        android:background="@color/colorAccent"
+        android:layout_gravity="bottom"/>
+
 </FrameLayout>
